# led_cube_555

./: README.md
Schematic/orcad/Led/: BACKUP1.MAX  BACKUP2.MAX  BACKUP3.MAX  BACKUP4.MAX  BACKUP5.MAX  LED555.DBK  LED555.DSN  LED555.ERR  LED555.LIS  LED555.MAX  LED555.MNL  LED555_DUNG.ERR  LED555_DUNG.LIS  LED555_DUNG.MAX  Led555.opj  merge.txt
Schematic/orcad/Main/: 555 - Copy.MAX  555.DBK  555.DSN  555.ERR  555.LIS  555.MAX  555.mnl  555.opj  555DB.MAX  555_DUNG.MAX  BACKUP1.MAX  BACKUP2.MAX  BACKUP3.MAX  BACKUP4.MAX  BACKUP5.MAX  Backup0.max  SWEEP1.MAX  merge.txt
SourceCode/proj/: cube555.prj
SourceCode/scripts/: 0.Clean.sh  1.cmake.sh  2.make.sh  3.checkUSBdevice.sh  4.downloadHEXtoDevice.sh  buildCode.sh  requirement.txt
SourceCode/src/: CMakeLists.txt  character.c  character.h  define.h  effect.c  effect.h  main.c  main.h
Tools/: Bin to Hex - Fixed.xlsm
